objects/Technical_Information__c/Technical_Information__c.object-meta.xml
<CustomObject>
    <label>Technical Information</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Technical Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>