objects/Technical_Information__c/fields/Access_Type__c.field-meta.xml
<CustomField>
    <fullName>Access_Type__c</fullName>
    <label>Access Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Existing Lit Building</fullName>
            </value>
            <value>
                <fullName>LEC / CLEC Loop Required</fullName>
            </value>
            <value>
                <fullName>Integra Build Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>