objects/Technical_Information__c/fields/Add_Change_Form_for_Existing_Services_po__c.field-meta.xml
<CustomField>
    <fullName>Add_Change_Form_for_Existing_Services_po__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add/Change Form (Existing/Turndown)</label>
    <type>Checkbox</type>
</CustomField>