objects/Technical_Information__c/fields/Available_AC_outlet__c.field-meta.xml
<CustomField>
    <fullName>Available_AC_outlet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available AC outlet</label>
    <type>Checkbox</type>
</CustomField>