objects/Technical_Information__c/fields/BGP__c.field-meta.xml
<CustomField>
    <fullName>BGP__c</fullName>
    <label>BGP?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>