objects/Technical_Information__c/fields/Bill_Copy_Required_on_Toll_Free__c.field-meta.xml
<CustomField>
    <fullName>Bill_Copy_Required_on_Toll_Free__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill Copy - Required on Toll Free</label>
    <type>Checkbox</type>
</CustomField>