objects/Technical_Information__c/fields/Billing_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Name__c</fullName>
    <label>Billing Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>