objects/Technical_Information__c/fields/Broadband_Phone_Number_1__c.field-meta.xml
<CustomField>
    <fullName>Broadband_Phone_Number_1__c</fullName>
    <label>Broadband Phone Number 1</label>
    <type>Phone</type>
</CustomField>