objects/Technical_Information__c/fields/Building_Access_Number__c.field-meta.xml
<CustomField>
    <fullName>Building_Access_Number__c</fullName>
    <label>Building Access Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>