objects/Technical_Information__c/fields/Business_Downturn_Decrease_Revenue_Pct__c.field-meta.xml
<CustomField>
    <fullName>Business_Downturn_Decrease_Revenue_Pct__c</fullName>
    <description>Editable Percent Field in Business Downturn PDF</description>
    <inlineHelpText>Editable Percent Field in Business Downturn PDF</inlineHelpText>
    <label>Business Downturn Decrease Revenue Pct</label>
    <length>10</length>
    <type>Text</type>
</CustomField>