objects/Technical_Information__c/fields/Call_Selection__c.field-meta.xml
<CustomField>
    <fullName>Call_Selection__c</fullName>
    <label>Call Selection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ascending</fullName>
            </value>
            <value>
                <fullName>Descending</fullName>
            </value>
            <value>
                <fullName>Most Idle</fullName>
            </value>
            <value>
                <fullName>Least Idle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>