objects/Technical_Information__c/fields/CFA_LOA_provided_by__c.field-meta.xml
<CustomField>
    <fullName>CFA_LOA_provided_by__c</fullName>
    <label>CFA/LOA provided by:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Integra</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>