objects/Technical_Information__c/fields/CFA_Notes__c.field-meta.xml
<CustomField>
    <fullName>CFA_Notes__c</fullName>
    <label>CFA Notes</label>
    <type>TextArea</type>
</CustomField>