objects/Technical_Information__c/fields/Circuit_Provider__c.field-meta.xml
<CustomField>
    <fullName>Circuit_Provider__c</fullName>
    <label>Circuit Provider</label>
    <length>50</length>
    <type>Text</type>
</CustomField>