objects/Technical_Information__c/fields/Cloud_Firewall_Location__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Firewall_Location__c</fullName>
    <description>Locations of Integra collocations that support cloud firewall</description>
    <inlineHelpText>Select the state of the Cloud Firewall Service for this location.  

Please note: Cloud Firewall is only offered in conjuction with VPN in the following states:  Oregon, Minnesota and Utah.</inlineHelpText>
    <label>Cloud Firewall Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DNVRCOET (DENVER HUB/SWITCH)</fullName>
            </value>
            <value>
                <fullName>MPLSMNCD (MINNEAPOLIS HUB/SWITCH)</fullName>
            </value>
            <value>
                <fullName>PTLEORTE (PORTLAND HUB/SWITCH)</fullName>
            </value>
            <value>
                <fullName>SLKCUTXD (SALT LAKE HUB/SWITCH)</fullName>
            </value>
            <value>
                <fullName>TKWLWAZS (TUKWILA HUB/SWITCH)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>