objects/Technical_Information__c/fields/Cloud_Firewall_Location_Details__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Firewall_Location_Details__c</fullName>
    <formula>CASE( Cloud_Firewall_Location__c ,
&quot;PTLEORTE (PORTLAND HUB/SWITCH)&quot;, &quot;Oregon Colocation 6058 NE 78TH COURT PORTLAND, OR 97218&quot;,
&quot;DNVRCOET (DENVER HUB/SWITCH)&quot;, &quot;Colorado Colocation 999 18TH ST DENVER, CO 80202&quot;,
&quot;MPLSMNCD (MINNEAPOLIS HUB/SWITCH)&quot;, &quot;Minnesota Colocation 511 11TH AVE SO SUITE 340 MINNEAPOLIS, MN 55415&quot;,
&quot;SLKCUTXD (SALT LAKE HUB/SWITCH)&quot;, &quot;Utah SLC Colocation 265 East 100 South, Suite 100, Salt Lake City, UT 84111&quot;,
&quot;TKWLWAZS (TUKWILA HUB/SWITCH)&quot;, &quot;Washington Colocation 13075 S GATEWAY DR TUKWILA,  WA  98168&quot;,
 &quot;Choose Firewall Location&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cloud Firewall Location Details</label>
    <type>Text</type>
</CustomField>