objects/Technical_Information__c/fields/Collocations__c.field-meta.xml
<CustomField>
    <fullName>Collocations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Colocation</label>
    <type>Checkbox</type>
</CustomField>