objects/Technical_Information__c/fields/Colo_facility__c.field-meta.xml
<CustomField>
    <fullName>Colo_facility__c</fullName>
    <label>Colo facility</label>
    <length>100</length>
    <type>Text</type>
</CustomField>