objects/Technical_Information__c/fields/Combo_Sale__c.field-meta.xml
<CustomField>
    <fullName>Combo_Sale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Combo Sale</label>
    <type>Checkbox</type>
</CustomField>