objects/Technical_Information__c/fields/Compatibility__c.field-meta.xml
<CustomField>
    <fullName>Compatibility__c</fullName>
    <label>Compatibility</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Integra-Provided Equipment Needed</fullName>
            </value>
            <value>
                <fullName>T1 Compatible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>