objects/Technical_Information__c/fields/Construction__c.field-meta.xml
<CustomField>
    <fullName>Construction__c</fullName>
    <label>Construction $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>