objects/Technical_Information__c/fields/CPE_Make_Model__c.field-meta.xml
<CustomField>
    <fullName>CPE_Make_Model__c</fullName>
    <label>CPE Make &amp; Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>