objects/Technical_Information__c/fields/CSR__c.field-meta.xml
<CustomField>
    <fullName>CSR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSR</label>
    <type>Checkbox</type>
</CustomField>