objects/Technical_Information__c/fields/CurrentProviderLD__c.field-meta.xml
<CustomField>
    <fullName>CurrentProviderLD__c</fullName>
    <formula>Opportunity_Site__r.Opportunity__r.Current_Provider_LD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CurrentProviderLD</label>
    <type>Text</type>
</CustomField>