objects/Technical_Information__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer Frames Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass All Customer Frames, Tagged &amp; Untagged (EPL or EVPL)</fullName>
            </value>
            <value>
                <fullName>Pass Only Frames with Specific VLAN Tags (EVPL)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>