objects/Technical_Information__c/fields/Customer_Handoff__c.field-meta.xml
<CustomField>
    <fullName>Customer_Handoff__c</fullName>
    <label>Customer Handoff</label>
    <length>50</length>
    <type>Text</type>
</CustomField>