objects/Technical_Information__c/fields/Customer_has_existing_email_service__c.field-meta.xml
<CustomField>
    <fullName>Customer_has_existing_email_service__c</fullName>
    <label>Customer has existing email service?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>