objects/Technical_Information__c/fields/Customer_has_existing_website__c.field-meta.xml
<CustomField>
    <fullName>Customer_has_existing_website__c</fullName>
    <label>Customer has existing website?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>