objects/Technical_Information__c/fields/Data_Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Data_Vendor_Name__c</fullName>
    <label>Data Vendor Name/#</label>
    <length>100</length>
    <type>Text</type>
</CustomField>