objects/Technical_Information__c/fields/DID__c.field-meta.xml
<CustomField>
    <fullName>DID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DID’s</label>
    <type>Checkbox</type>
</CustomField>