objects/Technical_Information__c/fields/Digits_Outpulsed__c.field-meta.xml
<CustomField>
    <fullName>Digits_Outpulsed__c</fullName>
    <label>Digits Outpulsed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>