objects/Technical_Information__c/fields/DSL_phone_number__c.field-meta.xml
<CustomField>
    <fullName>DSL_phone_number__c</fullName>
    <label>DSL phone number</label>
    <type>Phone</type>
</CustomField>