objects/Technical_Information__c/fields/Duplex_Mode__c.field-meta.xml
<CustomField>
    <fullName>Duplex_Mode__c</fullName>
    <formula>CASE( Interface_Type__c , &quot;Electrical&quot;, &quot;Full Duplex&quot;, &quot;Optical MM&quot;, &quot;Auto-Negotiation&quot;,&quot;Optical SM&quot;,&quot;Auto-Negotiation&quot;,&quot;Optical SM ICB&quot;,&quot;Auto-Negotiation&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duplex Mode</label>
    <type>Text</type>
</CustomField>