objects/Technical_Information__c/fields/ELINE_scenario__c.field-meta.xml
<CustomField>
    <fullName>ELINE_scenario__c</fullName>
    <label>ELINE scenario</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EPL</fullName>
            </value>
            <value>
                <fullName>EVPL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>