objects/Technical_Information__c/fields/Equipment_Location__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Location__c</fullName>
    <label>Equipment Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>