objects/Technical_Information__c/fields/Escorted_Access__c.field-meta.xml
<CustomField>
    <fullName>Escorted_Access__c</fullName>
    <label>Escorted Access</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>