objects/Technical_Information__c/fields/Ethernet_Mode__c.field-meta.xml
<CustomField>
    <fullName>Ethernet_Mode__c</fullName>
    <label>Ethernet Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Duplex</fullName>
                <default>true</default>
                <label>Full Duplex</label>
            </value>
            <value>
                <fullName>Auto Negotiate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>