objects/Technical_Information__c/fields/Existing_IP_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Existing_IP_Allocation__c</fullName>
    <label>Existing IP Allocation</label>
    <length>250</length>
    <type>Text</type>
</CustomField>