objects/Technical_Information__c/fields/External_Expedite__c.field-meta.xml
<CustomField>
    <fullName>External_Expedite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External Expedite</label>
    <type>Checkbox</type>
</CustomField>