objects/Technical_Information__c/fields/Facilities_LEC__c.field-meta.xml
<CustomField>
    <fullName>Facilities_LEC__c</fullName>
    <label>Facilities LEC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amberglen</fullName>
            </value>
            <value>
                <fullName>ELI – lit bldg</fullName>
            </value>
            <value>
                <fullName>Eschelon</fullName>
            </value>
            <value>
                <fullName>Frontier</fullName>
            </value>
            <value>
                <fullName>LEC DS3</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Qwest</fullName>
            </value>
            <value>
                <fullName>Verizon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>