objects/Technical_Information__c/fields/Floor_Plan_accompany_Site_Info_Doc__c.field-meta.xml
<CustomField>
    <fullName>Floor_Plan_accompany_Site_Info_Doc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Floor Plan (accompany Site Info Doc)</label>
    <type>Checkbox</type>
</CustomField>