objects/Technical_Information__c/fields/Flow_control__c.field-meta.xml
<CustomField>
    <fullName>Flow_control__c</fullName>
    <label>Flow control</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Symmetrical</fullName>
            </value>
            <value>
                <fullName>Asymmetrical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>