objects/Technical_Information__c/fields/Framing__c.field-meta.xml
<CustomField>
    <fullName>Framing__c</fullName>
    <label>Framing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ESF</fullName>
            </value>
            <value>
                <fullName>D4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>