objects/Technical_Information__c/fields/Hold_Recall__c.field-meta.xml
<CustomField>
    <fullName>Hold_Recall__c</fullName>
    <label>Hold Recall</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>60 sec</fullName>
            </value>
            <value>
                <fullName>90 sec</fullName>
            </value>
            <value>
                <fullName>120 sec</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>