objects/Technical_Information__c/fields/Hosted_PBX_Location_Details__c.field-meta.xml
<CustomField>
    <fullName>Hosted_PBX_Location_Details__c</fullName>
    <formula>CASE(Hosted_PBX_Locations__c ,
&quot;PTLEORTE (PORTLAND HUB/SWITCH)&quot;, &quot;Oregon Colocation 6058 NE 78TH COURT, PORTLAND, OR 97218&quot;,
&quot;DNVRCOET (DENVER HUB/SWITCH)&quot;, &quot;Colorado Colocation 999 18TH ST, DENVER, CO 80202&quot;,
&quot;MPLSMNCD (MINNEAPOLIS HUB/SWITCH)&quot;, &quot;Minnesota Colocation 511 11TH AVE SO SUITE 340, MINNEAPOLIS, MN 55415&quot;,
&quot;SLKCUTXD (SALT LAKE HUB/SWITCH)&quot;, &quot;Utah Colocation 265 E 100 S, Salt Lake City, UT 84111&quot;,
&quot;TKWLWAZS (TUKWILA HUB/SWITCH)&quot;, &quot;Washington Colocation 13075 S GATEWAY DR SUITE 200, TUKWILA, WA 98168&quot;,
&quot;Choose Hosted PBX Location&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hosted PBX Location Details</label>
    <type>Text</type>
</CustomField>