objects/Technical_Information__c/fields/Hosted_PBX_Locations__c.field-meta.xml
<CustomField>
    <fullName>Hosted_PBX_Locations__c</fullName>
    <label>Hosted PBX Locations</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DNVRCOET (DENVER HUB/SWITCH)</fullName>
            </value>
            <value>
                <fullName>MPLSMNCD (MINNEAPOLIS HUB/SWITCH)</fullName>
            </value>
            <value>
                <fullName>PTLEORTE (PORTLAND HUB/SWITCH)</fullName>
            </value>
            <value>
                <fullName>SLKCUTXD (SALT LAKE HUB/SWITCH)</fullName>
            </value>
            <value>
                <fullName>TKWLWAZS (TUKWILA HUB/SWITCH)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>