objects/Technical_Information__c/fields/Hosted_Voice_Form__c.field-meta.xml
<CustomField>
    <fullName>Hosted_Voice_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hosted Voice Form</label>
    <type>Checkbox</type>
</CustomField>