objects/Technical_Information__c/fields/ICB_Code__c.field-meta.xml
<CustomField>
    <fullName>ICB_Code__c</fullName>
    <label>ICB Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>