objects/Technical_Information__c/fields/ICB_Factor__c.field-meta.xml
<CustomField>
    <fullName>ICB_Factor__c</fullName>
    <label>ICB Factor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>