objects/Technical_Information__c/fields/If_Integra_Build_Required_CFR_Number__c.field-meta.xml
<CustomField>
    <fullName>If_Integra_Build_Required_CFR_Number__c</fullName>
    <label>If Integra Build Required, CFR Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>