objects/Technical_Information__c/fields/Installation_Tech__c.field-meta.xml
<CustomField>
    <fullName>Installation_Tech__c</fullName>
    <label>Installation Tech</label>
    <length>255</length>
    <type>Text</type>
</CustomField>