objects/Technical_Information__c/fields/Interface_Specification__c.field-meta.xml
<CustomField>
    <fullName>Interface_Specification__c</fullName>
    <label>Interface Specification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10/100/1000BASE-T, Copper/RJ45, up to 100m</fullName>
            </value>
            <value>
                <fullName>1000BASE-LX, 1310nm SMF, up to 550m</fullName>
            </value>
            <value>
                <fullName>1000BASE-LX10, 1310nm SMF, up to 10Km</fullName>
            </value>
            <value>
                <fullName>1000BASE-SX,850nm MMF, up to 550m</fullName>
            </value>
            <value>
                <fullName>100BASE-FX, 1310nm SMF, up to 2Km</fullName>
            </value>
            <value>
                <fullName>100BASE-LX10, 1310nm SMF, up to 10Km</fullName>
            </value>
            <value>
                <fullName>10GBASE-ER, 1550nm SMF, up to 40Km</fullName>
            </value>
            <value>
                <fullName>10GBASE-LR, 1310nm SMF, up to 10Km</fullName>
            </value>
            <value>
                <fullName>10GBASE-SR, 850nm MMF, up to 300m</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>