objects/Technical_Information__c/fields/Interface_Speed__c.field-meta.xml
<CustomField>
    <fullName>Interface_Speed__c</fullName>
    <label>Interface Speed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10 Mbps</fullName>
            </value>
            <value>
                <fullName>100 Mbps</fullName>
            </value>
            <value>
                <fullName>1,000 Mbps</fullName>
            </value>
            <value>
                <fullName>Carrier Ethernet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>