objects/Technical_Information__c/fields/Interlata_PIC__c.field-meta.xml
<CustomField>
    <fullName>Interlata_PIC__c</fullName>
    <label>Interlata PIC</label>
    <length>10</length>
    <type>Text</type>
</CustomField>