objects/Technical_Information__c/fields/Internal_Expedite__c.field-meta.xml
<CustomField>
    <fullName>Internal_Expedite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Expedite</label>
    <type>Checkbox</type>
</CustomField>