objects/Technical_Information__c/fields/Intralata_PIC__c.field-meta.xml
<CustomField>
    <fullName>Intralata_PIC__c</fullName>
    <label>Intralata PIC</label>
    <length>10</length>
    <type>Text</type>
</CustomField>