objects/Technical_Information__c/fields/IP_Address__c.field-meta.xml
<CustomField>
    <fullName>IP_Address__c</fullName>
    <label>IP Address</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Static IP</fullName>
            </value>
            <value>
                <fullName>Dynamic IP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>