objects/Technical_Information__c/fields/IP_Config__c.field-meta.xml
<CustomField>
    <fullName>IP_Config__c</fullName>
    <label>IP Config</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NAT/DHCP</fullName>
            </value>
            <value>
                <fullName>4-block</fullName>
            </value>
            <value>
                <fullName>8-block</fullName>
            </value>
            <value>
                <fullName>16-block</fullName>
            </value>
            <value>
                <fullName>32-block</fullName>
            </value>
            <value>
                <fullName>64-block</fullName>
            </value>
            <value>
                <fullName>128-block</fullName>
            </value>
            <value>
                <fullName>256-block</fullName>
            </value>
            <value>
                <fullName>IPv6 allocation</fullName>
            </value>
            <value>
                <fullName>IPv6 designation</fullName>
            </value>
            <value>
                <fullName>Keep existing space</fullName>
            </value>
            <value>
                <fullName>Customer’s own space</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>