objects/Technical_Information__c/fields/Is_This_an_EEL__c.field-meta.xml
<CustomField>
    <fullName>Is_This_an_EEL__c</fullName>
    <label>Is This an EEL?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>