objects/Technical_Information__c/fields/Jumbo_Frames__c.field-meta.xml
<CustomField>
    <fullName>Jumbo_Frames__c</fullName>
    <label>Jumbo Frames</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>