objects/Technical_Information__c/fields/Key_Access_Form__c.field-meta.xml
<CustomField>
    <fullName>Key_Access_Form__c</fullName>
    <label>Key/Access Form</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No, I forgot</fullName>
            </value>
            <value>
                <fullName>Yes, customer has forms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>