objects/Technical_Information__c/fields/KSU__c.field-meta.xml
<CustomField>
    <fullName>KSU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KSU</label>
    <type>Checkbox</type>
</CustomField>