objects/Technical_Information__c/fields/Layer_3_Related__c.field-meta.xml
<CustomField>
    <fullName>Layer_3_Related__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Layer 3 Related</label>
    <type>Checkbox</type>
</CustomField>