objects/Technical_Information__c/fields/Line_Framing__c.field-meta.xml
<CustomField>
    <fullName>Line_Framing__c</fullName>
    <label>Line Framing</label>
    <length>50</length>
    <type>Text</type>
</CustomField>