objects/Technical_Information__c/fields/Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Line_Type__c</fullName>
    <label>Line Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Circular</fullName>
            </value>
            <value>
                <fullName>Series</fullName>
            </value>
            <value>
                <fullName>Multi-Line</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>