objects/Technical_Information__c/fields/Location_Comments__c.field-meta.xml
<CustomField>
    <fullName>Location_Comments__c</fullName>
    <label>Location Comments</label>
    <type>TextArea</type>
</CustomField>