objects/Technical_Information__c/fields/Location_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Location_Contact_Email__c</fullName>
    <label>Location Contact Email</label>
    <type>Email</type>
</CustomField>