objects/Technical_Information__c/fields/Location_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Contact_Name__c</fullName>
    <label>Location Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>