objects/Technical_Information__c/fields/Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Location_Type__c</fullName>
    <label>Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Integra Hub</fullName>
            </value>
            <value>
                <fullName>Integra Hub / Customer Collocation</fullName>
            </value>
            <value>
                <fullName>End User</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>