objects/Technical_Information__c/fields/Loop_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Loop_Qualification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loop Qualification</label>
    <type>Checkbox</type>
</CustomField>