objects/Technical_Information__c/fields/M6_Customer__c.field-meta.xml
<CustomField>
    <fullName>M6_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>M6 Customer</label>
    <type>Checkbox</type>
</CustomField>