objects/Technical_Information__c/fields/Max_speed_per_tool__c.field-meta.xml
<CustomField>
    <fullName>Max_speed_per_tool__c</fullName>
    <label>Max speed (per tool)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5M</fullName>
            </value>
            <value>
                <fullName>10M</fullName>
            </value>
            <value>
                <fullName>15M</fullName>
            </value>
            <value>
                <fullName>20M</fullName>
            </value>
            <value>
                <fullName>30M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>