objects/Technical_Information__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>PBX Model</label>
    <length>150</length>
    <type>Text</type>
</CustomField>