objects/Technical_Information__c/fields/Move_Addendum_Months__c.field-meta.xml
<CustomField>
    <fullName>Move_Addendum_Months__c</fullName>
    <description>Editable &quot;Months&quot; field on Move Addedum PDF</description>
    <inlineHelpText>Editable &quot;Months&quot; field on Move Addedum PDF</inlineHelpText>
    <label>Move Addendum Months</label>
    <length>10</length>
    <type>Text</type>
</CustomField>