objects/Technical_Information__c/fields/MPOP_Location__c.field-meta.xml
<CustomField>
    <fullName>MPOP_Location__c</fullName>
    <label>MPOP Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>