objects/Technical_Information__c/fields/MSAG_E911_Address__c.field-meta.xml
<CustomField>
    <fullName>MSAG_E911_Address__c</fullName>
    <inlineHelpText>needed for Remote Location Service only</inlineHelpText>
    <label>MSAG/E911 Address</label>
    <type>TextArea</type>
</CustomField>