objects/Technical_Information__c/fields/MTS_Site_Information_Document__c.field-meta.xml
<CustomField>
    <fullName>MTS_Site_Information_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MTS Site Information Document</label>
    <type>Checkbox</type>
</CustomField>