objects/Technical_Information__c/fields/NAT_DHCP__c.field-meta.xml
<CustomField>
    <fullName>NAT_DHCP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NAT/DHCP</label>
    <type>Checkbox</type>
</CustomField>