objects/Technical_Information__c/fields/Network_Diagram__c.field-meta.xml
<CustomField>
    <fullName>Network_Diagram__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Network Diagram</label>
    <type>Checkbox</type>
</CustomField>