objects/Technical_Information__c/fields/New_Building__c.field-meta.xml
<CustomField>
    <fullName>New_Building__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Construction?</label>
    <type>Checkbox</type>
</CustomField>