objects/Technical_Information__c/fields/NFAS__c.field-meta.xml
<CustomField>
    <fullName>NFAS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NFAS</label>
    <type>Checkbox</type>
</CustomField>