objects/Technical_Information__c/fields/NID_Mounting__c.field-meta.xml
<CustomField>
    <fullName>NID_Mounting__c</fullName>
    <label>NID Mounting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wall Mount</fullName>
            </value>
            <value>
                <fullName>Rack Mount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>