objects/Technical_Information__c/fields/No_of_Inbound_Digits__c.field-meta.xml
<CustomField>
    <fullName>No_of_Inbound_Digits__c</fullName>
    <label>No. of Inbound Digits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>