objects/Technical_Information__c/fields/No_of_PRI_s_for_this_Trunk_Group__c.field-meta.xml
<CustomField>
    <fullName>No_of_PRI_s_for_this_Trunk_Group__c</fullName>
    <label>No.of PRI&#39;s for this Trunk Group</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>