objects/Technical_Information__c/fields/No_of_Public_IPs__c.field-meta.xml
<CustomField>
    <fullName>No_of_Public_IPs__c</fullName>
    <label>No of Public IPs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>