objects/Technical_Information__c/fields/No_of_Trunk_Groups__c.field-meta.xml
<CustomField>
    <fullName>No_of_Trunk_Groups__c</fullName>
    <label>No. of Trunk Groups</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>